Fix logo color
Broken in f49e2d237054f76b238e42bc7183aceeeacae19f by adding a <title> block to the SVG.

n-th child is pretty fragile.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -63,15 +63,15 @@ header {
     height: 64px;
 }
 
-.logo rect:nth-child(1) {
+.logo rect:nth-child(2) {
     fill: var(--logo-color-1);
 }
 
-.logo rect:nth-child(2) {
+.logo rect:nth-child(3) {
     fill: var(--logo-color-2);
 }
 
-.logo rect:nth-child(3) {
+.logo rect:nth-child(4) {
     fill: var(--logo-color-3);
 }
 
